feat: implement SOLID configuration extraction with testing

--- a/node-resume/client/public/index.html
+++ b/node-resume/client/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-        <title>Shared on THEMELOCK.COM - Dastyle - Admin & Dashboard Template</title>
+        <title>AI Resume Screening System - Smart Candidate Matching</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta content="Premium Multipurpose Admin & Dashboard Template" name="description" />
-        <meta content="" name="author" />
+        <meta content="AI-powered resume screening system using BERT for intelligent candidate matching and ranking" name="description" />
+        <meta content="AI Resume Screening" name="author" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
         <!-- App favicon -->
